light and dark mode fix attempt

--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,19 @@
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  html {
+    color: white;
+  }
+  .section-title {
+    border-bottom: 10px solid gold;
+  }
+  .btns img {
+    -webkit-filter: invert(1);
+            filter: invert(1);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
